--- a/Tensorflow_Course/pyproject.toml
+++ b/Tensorflow_Course/pyproject.toml
@@ -10,6 +10,10 @@ readme = "README.md"
 python = ">=3.9,<3.13"
 numpy = "^1.26.0"
 openpyxl = "^3.1.2"
+rpa = "^1.50.0"
+pillow = "^10.0.1"
+pandas = "^2.1.1"
+xlwings = "^0.30.12"
 
 
 [build-system]
